# pedalboard-protocol

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: pedalboard-v2.yaml
src/: action.rs  config.rs  controller.rs  encoder_accel.rs  engine.rs  led.rs  lib.rs  long_press.rs  property_exchange.rs  routing.rs  state.rs
