[package]
name = "pedalboard-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["no-std", "embedded"]

[dependencies]
heapless = { version = "0.9.3", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1.1.1", default-features = false }

[features]
default = []
