[package]
name = "midi-controller"
version = "0.7.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generic MIDI controller engine: button/encoder input processing, LED rendering, preset management, and MIDI-CI Property Exchange framing. #![no_std] compatible."
repository = "https://github.com/pedalboard/midi-controller"
keywords = ["midi", "controller", "no-std", "embedded", "midi-ci"]
categories = ["no-std", "embedded"]

[dependencies]
bitflags = "2.6"
heapless = { version = "0.9.3", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1.1.1", default-features = false }
led-ring = "0.1.1"

[features]
default = []
